<resources>
    <string name="app_name">PictureOfTheDay</string>
    <string name="search_in_wiki">Search in Wiki</string>


    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="wiki_helper_text">Find information in Wikipedia.</string>
    <string name="favorite">favorite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_icon_text">content description start icon</string>
    <string name="title_text">Two Clusters and a Comet</string>
    <string name="explanation_text">This lovely starfield spans some four full moons.</string>
    <string name="on_screen_1">On screen 1</string>
    <string name="on_screen_2">On screen 2</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="pozavchera">Pozavchera</string>
    <string name="full_hd">Full-HD</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>


</resources>