<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mainImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_planet_earth" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_layout_margin_start"
        android:layout_marginTop="@dimen/input_layout_margin_top"
        android:layout_marginEnd="@dimen/input_layout_margin_end"
        android:layout_marginBottom="@dimen/input_layout_margin_bottom"
        android:hint="@string/search_in_wiki"
        app:endIconDrawable="@drawable/ic_wikipedia"
        app:endIconMode="custom"
        app:helperText="@string/wiki_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/content_description_icon_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/chip_group_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTheDayBeforeYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pozavchera" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFullHD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_hd" />
    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>